// Quarry ClickHouse schema — ELT staging database
// Source: sql/ch_schema.sql + sql/ch_transform.sql

Project quarry_ch {
  database_type: 'ClickHouse'
  Note: 'Staging DB. Raw tables (ReplacingMergeTree) for dedup, export tables for CH→PG pipe.'
}

// ── JOIN relationships (no FK enforcement, used by ch_transform.sql) ──

Ref: oa_works.pmid > pm_papers.pmid             // works_export LEFT JOIN
Ref: oa_works.pmid > icite_raw.pmid             // works_export LEFT JOIN
Ref: pm_papers.pmid > icite_raw.pmid            // papers_export LEFT JOIN
Ref: oa_id_crosswalk.pmid > pm_mesh_headings.pmid // work_mesh_export INNER JOIN

// ── OA raw tables (ReplacingMergeTree) ──

Table oa_works {
  work_id String [not null, note: 'ORDER BY']
  work_id_int UInt64
  tier "LowCardinality(String)" [note: 't1/t2/t3/t4']
  pmid "Nullable(UInt32)"
  doi "Nullable(String)"
  title String
  abstract "Nullable(String)"
  pub_year "Nullable(UInt16)"
  pub_date "Nullable(Date32)"
  type "Nullable(String)"
  cited_by_count "Nullable(UInt32)"
  host_venue "Nullable(String)"
  oa_status "Nullable(String)"
  oa_url "Nullable(String)"
  is_retracted Bool [default: false]
  updated_date Date [note: 'ReplacingMergeTree version col, PARTITION BY toYear()']

  Note: 'ENGINE = ReplacingMergeTree(updated_date) PARTITION BY toYear(updated_date)'
}

Table oa_work_authors {
  work_id String [not null]
  author_position UInt16
  display_name "Nullable(String)"
  orcid "Nullable(String)"
  institution_name "Nullable(String)"
  institution_ror "Nullable(String)"
  raw_affiliation "Nullable(String)"
  updated_date Date

  Note: 'ENGINE = ReplacingMergeTree(updated_date) ORDER BY (work_id, author_position)'
}

Table oa_work_topics {
  work_id String [not null]
  topic_id String [not null]
  topic_name "Nullable(String)"
  subfield "Nullable(String)"
  field "Nullable(String)"
  domain "Nullable(String)"
  score "Nullable(Float32)"
  is_primary Bool [default: false]
  updated_date Date

  Note: 'ENGINE = ReplacingMergeTree(updated_date) ORDER BY (work_id, topic_id)'
}

Table oa_work_citations {
  citing_id UInt64 [not null]
  cited_id UInt64 [not null]
  updated_date Date

  Note: 'ENGINE = ReplacingMergeTree(updated_date) ORDER BY (citing_id, cited_id) PARTITION BY intDiv(citing_id, 100000000)'
}

Table oa_id_crosswalk {
  work_id String [not null, note: 'ORDER BY']
  pmid UInt32
  updated_date Date

  Note: 'ENGINE = ReplacingMergeTree(updated_date)'
}

// ── PubMed raw tables ──

Table pm_papers {
  pmid UInt32 [not null, note: 'ORDER BY']
  doi "Nullable(String)"
  pmc_id "Nullable(String)"
  title "Nullable(String)"
  abstract "Nullable(String)"
  pub_year "Nullable(UInt16)"
  pub_date "Nullable(Date32)"
  journal_title "Nullable(String)"
  journal_issn "Nullable(String)"
  journal_abbr "Nullable(String)"
  volume "Nullable(String)"
  issue "Nullable(String)"
  pages "Nullable(String)"
  language "Nullable(String)"
  pub_type "Array(String)"
  country "Nullable(String)"
  medline_status "Nullable(String)"
  created_date "Nullable(Date)"
  revised_date "Nullable(Date)"
  indexed_date "Nullable(Date)"
  is_deleted Bool [default: false]
  deleted_date "Nullable(Date)"
  _version UInt64 [default: 0, note: 'ReplacingMergeTree version col']

  Note: 'ENGINE = ReplacingMergeTree(_version) ORDER BY (pmid)'
}

Table pm_authors {
  pmid UInt32 [not null]
  author_position UInt16
  last_name "Nullable(String)"
  fore_name "Nullable(String)"
  initials "Nullable(String)"
  orcid "Nullable(String)"
  affiliation "Nullable(String)"
  is_collective Bool [default: false]
  _version UInt64 [default: 0]

  Note: 'ENGINE = ReplacingMergeTree(_version) ORDER BY (pmid, author_position)'
}

Table pm_mesh_headings {
  pmid UInt32 [not null]
  descriptor_ui String
  descriptor_name String
  qualifier_ui String [default: '']
  qualifier_name "Nullable(String)"
  is_major_topic Bool [default: false]
  _version UInt64 [default: 0]

  Note: 'ENGINE = ReplacingMergeTree(_version) ORDER BY (pmid, descriptor_ui, qualifier_ui)'
}

Table pm_grants {
  pmid UInt32 [not null]
  grant_id String [default: '']
  acronym "Nullable(String)"
  agency "Nullable(String)"
  country "Nullable(String)"
  _version UInt64 [default: 0]

  Note: 'ENGINE = ReplacingMergeTree(_version) ORDER BY (pmid, grant_id)'
}

Table pm_chemicals {
  pmid UInt32 [not null]
  registry_number "Nullable(String)"
  substance_ui String [default: '']
  substance_name "Nullable(String)"
  _version UInt64 [default: 0]

  Note: 'ENGINE = ReplacingMergeTree(_version) ORDER BY (pmid, substance_ui)'
}

Table pm_mesh_tree {
  descriptor_ui String [not null]
  descriptor_name String
  tree_number String [not null]

  Note: 'ENGINE = ReplacingMergeTree() ORDER BY (descriptor_ui, tree_number)'
}

// ── iCite raw table ──

Table icite_raw {
  pmid UInt32 [not null, note: 'ORDER BY']
  doi "Nullable(String)"
  title "Nullable(String)"
  authors "Nullable(String)"
  year "Nullable(UInt16)"
  journal "Nullable(String)"
  is_research_article "Nullable(String)"
  citation_count "Nullable(UInt32)"
  field_citation_rate "Nullable(Float32)"
  expected_citations_per_year "Nullable(Float32)"
  citations_per_year "Nullable(Float32)"
  relative_citation_ratio "Nullable(Float32)"
  nih_percentile "Nullable(Float32)"
  human "Nullable(Float32)"
  animal "Nullable(Float32)"
  molecular_cellular "Nullable(Float32)"
  x_coord "Nullable(Float32)"
  y_coord "Nullable(Float32)"
  apt "Nullable(Float32)"
  is_clinical "Nullable(String)"
  cited_by_clin "Nullable(String)" [note: 'space-separated PMIDs']
  cited_by "Nullable(String)"
  references "Nullable(String)"
  provisional "Nullable(String)"
  last_modified "Nullable(String)"

  Note: 'ENGINE = ReplacingMergeTree() ORDER BY (pmid)'
}

// ── Export tables (created by ch_transform.sql) ──

Table works_export {
  work_id String [not null, note: 'ORDER BY']
  work_id_int UInt64
  tier "LowCardinality(String)"
  pmid "Nullable(UInt32)"
  doi "Nullable(String)"
  title String
  abstract "Nullable(String)"
  pub_year "Nullable(UInt16)"
  pub_date "Nullable(Date32)"
  type "Nullable(String)"
  cited_by_count "Nullable(UInt32)"
  host_venue "Nullable(String)"
  oa_status "Nullable(String)"
  oa_url "Nullable(String)"
  is_retracted Bool
  updated_date Date
  pm_journal_abbr "Nullable(String)" [note: 'LEFT JOIN pm_papers']
  pm_country "Nullable(String)"
  pm_medline_status "Nullable(String)"
  pm_pub_type String [note: 'PG array format: {val1,val2}']
  pm_created_date "Nullable(Date)"
  pm_revised_date "Nullable(Date)"
  pm_indexed_date "Nullable(Date)"
  rcr "Nullable(Float32)" [note: 'LEFT JOIN icite_raw']
  nih_percentile "Nullable(Float32)"
  apt "Nullable(Float32)"
  is_clinical Bool

  Note: 'ENGINE = MergeTree() — CREATE AS SELECT from oa_works LEFT JOIN pm_papers LEFT JOIN icite_raw'
}

Table papers_export {
  pmid UInt32 [not null, note: 'ORDER BY']
  doi "Nullable(String)"
  pmc_id "Nullable(String)"
  title "Nullable(String)"
  abstract "Nullable(String)"
  pub_year "Nullable(UInt16)"
  pub_date "Nullable(Date32)"
  journal_title "Nullable(String)"
  journal_issn "Nullable(String)"
  journal_abbr "Nullable(String)"
  volume "Nullable(String)"
  issue "Nullable(String)"
  pages "Nullable(String)"
  language "Nullable(String)"
  pub_type String [note: 'PG array format']
  country "Nullable(String)"
  medline_status "Nullable(String)"
  created_date "Nullable(Date)"
  revised_date "Nullable(Date)"
  indexed_date "Nullable(Date)"
  is_deleted Bool
  deleted_date "Nullable(Date)"
  rcr "Nullable(Float32)" [note: 'LEFT JOIN icite_raw']
  nih_percentile "Nullable(Float32)"
  apt "Nullable(Float32)"
  is_clinical Bool
  human "Nullable(Float32)"
  animal "Nullable(Float32)"
  molecular_cellular "Nullable(Float32)"
  field_citation_rate "Nullable(Float32)"

  Note: 'ENGINE = MergeTree() — CREATE AS SELECT from pm_papers LEFT JOIN icite_raw'
}

Table work_mesh_export {
  work_id String [not null]
  descriptor_ui String [not null]
  descriptor_name String
  qualifier_ui String
  qualifier_name "Nullable(String)"
  is_major_topic Bool

  Note: 'ENGINE = MergeTree() ORDER BY (work_id, descriptor_ui) — INNER JOIN pm_mesh_headings ON oa_id_crosswalk'
}

Table cited_by_clin_export {
  pmid UInt32 [not null]
  citing_pmid UInt32 [not null]

  Note: 'ENGINE = MergeTree() ORDER BY (pmid, citing_pmid) — ARRAY JOIN splitByChar on icite_raw.cited_by_clin'
}
